--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Uaki Global Initiative Website",
   "main": "main.js",
   "scripts": {
-    "start": "gulp"
+    "start": "gulp",
+    "sass-build-watch": "sass sass/main.sass:css/main.css --style compressed --watch"
   },
   "repository": "https://jpdragon@bitbucket.org/nucleus-apps/uaiki-gi.git",
   "keywords": [
@@ -20,16 +21,21 @@
     "babel-core": "^6.18.2",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
-    "browser-sync": "^2.18.5",
+    "browser-sync": "^2.18.12",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-cached": "^1.1.1",
     "gulp-concat": "^2.6.1",
-    "gulp-pug": "^3.2.0",
+    "gulp-pug": "^3.3.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.2",
-    "gulp-uglify": "^2.0.0",
+    "gulp-uglify": "^2.1.2",
     "merge-stream": "^1.0.1",
     "node-notifier": "^4.6.1"
+  },
+  "dependencies": {
+    "express": "^4.15.3",
+    "map": "^1.0.1",
+    "pug": "^2.0.0-rc.2"
   }
 }
